2010-07-09  Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/configure.in, Makefile.am: Modified to compile executable with
	version information embedded

	* win32/versioninfo.rc: Added version information file for win32 
	executable
	Fixes: #3007874

2010-07-07  Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/pandora_windows_service.h: Added constant for default port for
	ftp and ssh 
	
	* win32/pandora_windows_service.cc: Added support for change ssh and ftp
	port

2010-07-05  Junichi Satoh  <junichi@rworks.jp>

	* unix/pandora_agent_installer: Fixed typo and directory permission
	for FreeBSD.
	
	* unix/FreeBSD/pandora_agent: Simplified.

2010-06-18  Ramon Novoa  <rnovoa@artica.es>
	
	* unix/pandora_exec: Added to repository. pandora_exec script.

	* unix/pandora_agent_installer, unix/DEBIAN/postinst,
	  unix/DEBIAN/make_deb_package.sh, unix/pandora_agent.spec: Added the
	  pandora_exec script to the installation.

	* unix/pandora_agent_daemon: Added support for running the agent as
	  an unprivileged user.
	
	* unix/pandora_agent: Added timeout support for module_exec modules.

2010-06-14  Junichi Satoh  <junichi@rworks.jp>

	* unix/pandora_agent_installer: Set execute bit to startup script
	for FreeBSD.

2010-06-09  Miguel de Dios  <miguel.dedios@artica.es>

	* unix/DEBIAN/make_deb_package.sh: added the code to include the man pages
	into DEB package.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* unix/man, unix/man/man1,
	  unix/man/man1/pandora_agent.1.gz,
	  unix/man/man1/tentacle_client.1.gz: Added to repository.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* man, man/man1,
	  man/man1/pandora_agent.1.gz,
	  man/man1/tentacle_client.1.gz: Removed from repository.

2010-06-08  Ramon Novoa  <rnovoa@artica.es>

	* unix/DEBIAN/control, unix/DEBIAN/make_deb_package.sh,
	  unix/pandora_agent.spec, unix/pandora_agent,
	  win32/installer/pandora.mpi, win32/pandora.cc: Updated version
	  strings.

2010-06-07  Junichi Satoh  <junichi@rworks.jp>
