@@ -592,6 +592,151 @@ Pandora_Windows_Service::copyLocalDataFile (string remote_path,
 }
 
 void
+Pandora_Windows_Service::checkCollections () {
+	
+	int flag, i;
+	char *coll_md5 = NULL, *server_coll_md5 = NULL;
+	string collection_name, collections_dir, tmp;
+	string collection_zip, install_dir, temp_dir;
+
+	/*Get collections directory*/
+	install_dir = Pandora::getPandoraInstallDir ();
+	collections_dir = install_dir+"collections\\";
+	
+	/* Get temporal directory */
+	temp_dir = conf->getValue ("temporal");
+	if (temp_dir[temp_dir.length () - 1] != '\\') {
+		temp_dir += "\\";
+	}
+
+	/*Set iterator in the firs collection*/
+	conf->goFirstCollection();
+	
+	while (! conf->isLastCollection()) {
+		
+		collection_name = conf->getCurrentCollection();	
+		collection_zip = collection_name+".zip";
+		collection_name = collection_name + ".md5";
+		tmp = collections_dir+collection_name;
+			
+		/*Reading local collection md5*/
+		try {
+			if (Pandora_File::readBinFile (tmp, &coll_md5) < 32) {
+				pandoraLog ("Pandora_Windows_Service::checkCollection: Invalid remote md5", tmp.c_str());
+				if (coll_md5 != NULL) {
+					delete[] coll_md5;
+				}		
+				return;
+			}
+		} catch (...) {
+			/*Getting new md5*/
+			try {				
+				/*Downloading md5 file*/
+				recvDataFile (collection_name);
+				
+				/*Reading new md5 file*/
+				tmp = temp_dir + collection_name;
+				
+				if (Pandora_File::readBinFile (tmp, &coll_md5) < 32) {
+					cout<<"ERROR"<<endl;
+					pandoraLog ("Pandora_Windows_Service::checkCollection: Invalid remote md5", tmp.c_str());
+					if (coll_md5 != NULL) {
+						delete[] coll_md5;
+					}		
+					return;
+				}
+				
+				Pandora_File::removeFile (tmp);
+				
+				/* Save new md5 file */
+				tmp = collections_dir + collection_name;
+				Pandora_File::writeBinFile (tmp, coll_md5, 32);
+				
+			} catch(...) {
+				pandoraLog ("Pandora_Windows_Service::checkCollection: Can not download %s", collection_name.c_str());
+				return;
+			}
+			
+			/*Getting new zipped collection*/
+			try {
+				/*Downloading zipped collection*/
+				recvDataFile (collection_zip);
+				
+				/*Uncompress zipped collection*/
+				/*NOT YET*/
+			} catch (...) {
+				pandoraLog ("Pandora_Windows_Service::checkCollection: Can not download %s", collection_zip.c_str());
+				return;	
+			}
+			
+			return;
+		}
+		
+		/*Reading server collection md5*/
+		try {
+			recvDataFile(collection_name);
+			tmp = temp_dir+collection_name;
+			if (Pandora_File::readBinFile (tmp, &server_coll_md5) < 32) {
+				pandoraLog ("Pandora_Windows_Service::checkCollection: Invalid remote md5", tmp.c_str());
+				if (server_coll_md5 != NULL) {
+					delete[] server_coll_md5;
+				}		
+				return;
+			}
+			Pandora_File::removeFile (tmp);	
+			
+		} catch (...) {
+			pandoraLog ("Pandora_Windows_Service::checkCollection: Can not download %s", collection_name.c_str());
+			return;		
+		}
+		
+		/*Check both md5*/
+		flag = 0;
+		for (i = 0; i < 32; i++) {
+			if (coll_md5[i] != server_coll_md5[i]) {
+				flag = 1;
+				break;
+			}
+		}
+		
+		/*If the two md5 are equals, exit*/
+		if (flag == 0) {
+			return;
+		}
+		
+		pandoraLog("Pandora_Windows_Service::checkCollections: Collection %s has changed", collection_name.c_str ());
+					
+		/*Getting new zipped collection*/
+		try {
+			/*Downloading zipped collection*/
+			recvDataFile (collection_zip);
+			
+			/*Uncompress zipped collection*/
+			/*NOT YET*/
+		} catch (...) {
+			pandoraLog ("Pandora_Windows_Service::checkCollection: Can not download %s", collection_zip.c_str());
+			return;	
+		}
+		
+		/* Save new md5 file */
+		tmp = collections_dir + collection_name;
+		Pandora_File::writeBinFile (tmp, server_coll_md5, 32);
+		
+		/*Free coll_md5*/
+		if (coll_md5 != NULL) {
+			delete[] coll_md5;
+		}
+		
+		/*Free server_coll_md5*/
+		if (server_coll_md5 != NULL) {
+			delete[] server_coll_md5;
+		}
+				
+		conf->goNextCollection();
+	}
+}
+
+void
 Pandora_Windows_Service::checkConfig () {
 	int i, conf_size;
 	char *conf_str = NULL, *remote_conf_str = NULL, *remote_conf_md5 = NULL;
@@ -862,10 +1007,11 @@ Pandora_Windows_Service::pandora_run () {
 	pandoraDebug ("Run begin");
 	
 	conf = this->getConf ();
-
+	
 	/* Check for configuration changes */
 	if (getPandoraDebug () == false) {
 		this->checkConfig ();
+		this->checkCollections ();
 	}
 
 	server_addr = conf->getValue ("server_ip");
