@@ -1,3 +1,10 @@
+2010-07-14  Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* win32/pandora_agent_conf.cc, pandora_agent_conf.h: Added functionality
+	to get collection from configuration file.
+        * win32/pandora_windows_service.cc, pandora_windows_service.h: Added
+	support for manage collections.
+
 2010-07-09  Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* win32/configure.in, Makefile.am: Modified to compile executable with
